fix: disable tooltips on small and touch devices

--- a/src/components/navbar/NavbarButtons/Tooltip.css
+++ b/src/components/navbar/NavbarButtons/Tooltip.css
@@ -55,3 +55,9 @@
   outline: none;
   cursor: pointer;
 }
+
+@media (hover: none) and (pointer: coarse) {
+  .tooltip {
+    display: none;
+  }
+}
